인증 로직 구현 - Google OAuth2 지원 - Users 테이블에 'uid', 'avatar_url' 칼럼 추가 -- uid: Google 계정별 unique ID -- avatar_url: 프로필 사진 URL - 로그인 API URL path 변경 -- /api/v1/auth/login/:provider
