# api/router.go
@@ -2,15 +2,20 @@ package api
 
 import (
 	"bread-clock/db"
+	"bread-clock/middlewares"
 	"github.com/gin-gonic/gin"
 )
 
-func RegisterRoutes(r *gin.Engine, bakeryRepository db.BakeryRepository) {
+func RegisterRoutes(r *gin.Engine, userRepository db.UserRepository, bakeryRepository db.BakeryRepository) {
 	g := r.Group("/api/v1")
 
-	ah := authHandler{}
+	ah := authHandler{
+		userRepository: userRepository,
+	}
 	authRouter := g.Group("/auth")
-	authRouter.POST("/login", ah.login)
+	authRouter.POST("/login/:provider", ah.login)
+
+	g.Use(middlewares.AuthMiddleware())
 
 	sh := searchHandler{
 		bakeryRepository: bakeryRepository,
