# docs/swagger.json
@@ -12,7 +12,7 @@
     "host": "breadclock.hyunchung.dev",
     "basePath": "/api/v1",
     "paths": {
-        "/auth/login": {
+        "/auth/login/:provider": {
             "post": {
                 "description": "OAuth2로 발급 받은 코드를 이용한 토큰 발급 및 로그인 처리",
                 "produces": [
@@ -23,6 +23,13 @@
                 ],
                 "summary": "로그인",
                 "parameters": [
+                    {
+                        "type": "string",
+                        "description": "OAuth2 provider",
+                        "name": "provider",
+                        "in": "path",
+                        "required": true
+                    },
                     {
                         "description": "로그인 요청 정보",
                         "name": "loginRequest",
@@ -461,7 +468,7 @@
         "api.loginRequest": {
             "type": "object",
             "properties": {
-                "code": {
+                "accessToken": {
                     "type": "string"
                 },
                 "provider": {
